--- a/src/page/write/write.css
+++ b/src/page/write/write.css
@@ -60,7 +60,7 @@
   
   .writeSubmit {
     position: absolute;
-    top: 20px;
+    top: 20rem;
     right: 50px;
     color: white;
     background-color: teal;
