--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -4,6 +4,7 @@
 }
   
   .headerTitles {
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,6 +26,8 @@
   
   .headerImg {
     position: relative;
+    display: flex;
+    align-items: center;
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -34,8 +37,8 @@
 
   .centered {
     position: absolute;
-    top: 60%;
-    left: 35%;
+    display: flex;
+    align-items: center;
     font-family: "Roboto";
     font-size: 100px;
     color: rgb(255, 255, 255);
