--- a/src/component/post/post.css
+++ b/src/component/post/post.css
@@ -12,11 +12,11 @@
 }
 
   .postImg {
-    width: 100px;
+    width: 500px;
+    width: 100%;
     height: auto;
     object-fit: cover;
     border-radius: 7px;
-    margin-left: 9rem;
   }
   
   .postInfo {
